--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         image: prom/prometheus
         volumes:
             - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-            - ./prometheus/data:/prometheus-data
+            - ./prometheus/data:/prometheus
         ports:
             - 9090:9090
     grafana:
