--- a/alertmanager/config.yml
+++ b/alertmanager/config.yml
@@ -2,7 +2,7 @@ global:
   resolve_timeout: 5m
 
 route:
-  group_by: ['lua-china']
+  group_by: ['sms_alert']
   group_wait: 10s
   group_interval: 10s
   repeat_interval: 1h
@@ -10,11 +10,11 @@ route:
 receivers:
 - name: 'web.hook'
   webhook_configs:
-  - url: 'https://api.wangfengta.com/api/alarm?secretKey=558914de-d7f1-4bcf-a19d-288b9397e13d&appCode=485872819216846848&templateCode=485873035009593344&params={}'
+  - url: 'https://api.lua-china.com/send/sms?phone=13571899655'
 inhibit_rules:
   - source_match:
       severity: 'critical'
     target_match:
       severity: 'warning'
-    equal: ['lua-china', 'lua-china-api']
+    equal: ['sms_alert']
 
