--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,21 @@ services:
             - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
             - ./prometheus/data:/prometheus
         ports:
-            - 9090:9090
+            - 10.31.231.178:9090:9090
+        command:
+            - '--config.file=/etc/prometheus/prometheus.yml'
+            - '--storage.tsdb.path=/prometheus'
+            - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+            - '--web.console.templates=/usr/share/prometheus/consoles'
+            - '--storage.tsdb.retention.time=7d'
+    node-exporter:
+        image: prom/node-exporter
+        volumes:
+            - /proc:/host/proc:ro
+            - /sys:/host/sys:ro
+            - /:/rootfs:ro
+        ports:
+            - 10.31.231.178:9100:9100
     grafana:
         image: grafana/grafana
         volumes:
