--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -26,4 +26,7 @@ scrape_configs:
     # scheme defaults to 'http'.
 
     static_configs:
-    - targets: ['localhost:9090']
+    - targets: ['localhost:9090', '10.31.231.178:8001']
+  - job_name: 'node_exporter'
+    static_configs:
+    - targets: ['10.31.231.178:9100']
